feature: add keywords to server package json

--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -6,7 +6,10 @@
   "bin": "bin/server.js",
   "type": "module",
   "scripts": {},
-  "keywords": [],
+  "keywords": [
+    "Lvce Editor",
+    "Server"
+  ],
   "author": "",
   "license": "MIT",
   "repository": {
