--- a/packages/shared-process/package.json
+++ b/packages/shared-process/package.json
@@ -42,7 +42,8 @@
     "symlink-dir": "^5.1.1",
     "tmp-promise": "^3.0.3",
     "trash": "^8.1.1",
-    "tail": "^2.2.6"
+    "tail": "^2.2.6",
+    "windows-process-tree": "^0.4.0"
   },
   "devDependencies": {
     "@types/debug": "^4.1.8",
