test: migrate windows process tree test to esm

--- a/packages/shared-process/package.json
+++ b/packages/shared-process/package.json
@@ -97,5 +97,13 @@
     "ignores": [
       "distmin"
     ]
+  },
+  "jest": {
+    "moduleNameMapper": {
+      "windows-process-tree": "<rootDir>/mocks/windows-process-tree.js"
+    },
+    "testMatch": [
+      "**/test/**/*.js"
+    ]
   }
 }
