--- a/packages/shared-process/package.json
+++ b/packages/shared-process/package.json
@@ -43,7 +43,7 @@
     "tmp-promise": "^3.0.3",
     "trash": "^8.1.1",
     "tail": "^2.2.6",
-    "windows-process-tree": "^0.4.0"
+    "@vscode/windows-process-tree": "^0.5.0"
   },
   "devDependencies": {
     "@types/debug": "^4.1.8",
@@ -100,7 +100,7 @@
   },
   "jest": {
     "moduleNameMapper": {
-      "windows-process-tree": "<rootDir>/mocks/windows-process-tree.js"
+      "@vscode/windows-process-tree": "<rootDir>/mocks/windows-process-tree.js"
     },
     "testMatch": [
       "**/test/**/*.js"
