--- a/packages/main-process/package.json
+++ b/packages/main-process/package.json
@@ -34,8 +34,7 @@
     "verror": "^1.10.1"
   },
   "optionalDependencies": {
-    "electron-updater": "^5.3.0",
-    "windows-process-tree": "^0.4.0"
+    "electron-updater": "^5.3.0"
   },
   "jest": {
     "moduleFileExtensions": [
