--- a/packages/pty-host/package.json
+++ b/packages/pty-host/package.json
@@ -31,7 +31,7 @@
     "@types/ws": "^8.5.5"
   },
   "optionalDependencies": {
-    "node-pty": "^0.11.0-beta27"
+    "node-pty": "^1.0.0"
   },
   "xo": {
     "rules": {
