--- a/packages/babel-worker/package.json
+++ b/packages/babel-worker/package.json
@@ -12,7 +12,9 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@babel/code-frame": "^7.22.5",
     "@babel/core": "^7.22.5",
-    "@babel/preset-typescript": "^7.22.5"
+    "@babel/preset-typescript": "^7.22.5",
+    "lines-and-columns": "^2.0.3"
   }
 }
