--- a/packages/renderer-worker/tsconfig.json
+++ b/packages/renderer-worker/tsconfig.json
@@ -12,7 +12,8 @@
     "isolatedModules": true,
     "assumeChangesOnlyAffectDirectDependencies": true,
     "strict": true,
-    "noImplicitAny": false
+    "noImplicitAny": false,
+    "allowImportingTsExtensions": true
   },
   "include": ["src", "test"]
 }
