--- a/package.json
+++ b/package.json
@@ -26,11 +26,12 @@
     "@types/node": "^20.3.1",
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
-    "lerna": "^6.6.2",
+    "lerna": "^7.0.2",
     "nodemon": "^2.0.22",
     "prettier": "^2.8.8",
     "typescript": "^5.1.3",
-    "wait-for-expect": "^3.0.2"
+    "wait-for-expect": "^3.0.2",
+    "@lerna/legacy-package-management": "^7.0.2"
   },
   "prettier": {
     "semi": false,
