fix: don't cache tmp folder in ci

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -109,6 +109,9 @@ jobs:
         uses: actions/upload-pages-artifact@v1
         with:
           path: ./build/.tmp/dist
+      - name: Clean up
+        run: rm -rf node build/.tmp
+
   deploy:
     environment:
       name: github-pages
