--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -198,6 +198,8 @@ jobs:
         working-directory: ./build/.tmp/server/shared-process
         env:
           NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
+      - name: Clean up
+        run: rm -rf node build/.tmp
 
       # - name: Build archive
       #   shell: bash
