fix: use bash for bash functions

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -111,6 +111,7 @@ jobs:
           path: ./build/.tmp/dist
       - name: Clean up
         run: rm -rf node build/.tmp
+        shell: bash
 
   deploy:
     environment:
