--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -200,6 +200,7 @@ jobs:
           NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
       - name: Clean up
         run: rm -rf node build/.tmp
+        shell: bash
 
       # - name: Build archive
       #   shell: bash
