--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -106,3 +106,6 @@ jobs:
       - name: Build Electron App (exe)
         if: matrix.os == 'windows-2022'
         run: node build/bin/build.js --target=electron-builder-windows-exe
+      - name: Clean up
+        run: rm -rf node build/.tmp
+        shell: bash
