--- a/packages/main-process/package.json
+++ b/packages/main-process/package.json
@@ -21,7 +21,6 @@
   "devDependencies": {
     "@electron/rebuild": "^3.2.13",
     "@types/debug": "^4.1.8",
-    "@types/verror": "^1.10.6",
     "electron": "^25.2.0"
   },
   "dependencies": {
@@ -30,8 +29,7 @@
     "debug": "^4.3.4",
     "electron-unhandled": "^4.0.1",
     "lines-and-columns": "^2.0.3",
-    "minimist": "^1.2.8",
-    "verror": "^1.10.1"
+    "minimist": "^1.2.8"
   },
   "optionalDependencies": {
     "electron-updater": "^6.1.1"
