feature: use typescript in renderer process

--- a/packages/renderer-process/tsconfig.json
+++ b/packages/renderer-process/tsconfig.json
@@ -13,7 +13,8 @@
     "assumeChangesOnlyAffectDirectDependencies": true,
     "strict": true,
     "noImplicitAny": false,
-    "strictNullChecks": false
+    "strictNullChecks": false,
+    "allowImportingTsExtensions": true
   },
   "include": ["src", "test"]
 }
