--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "node": ">=16"
   },
   "devDependencies": {
+    "@lerna/legacy-package-management": "^7.1.4",
     "@types/jest": "^29.5.3",
     "@types/node": "^20.4.2",
     "jest": "^29.6.1",
@@ -29,9 +30,9 @@
     "lerna": "^7.1.4",
     "nodemon": "^3.0.1",
     "prettier": "^2.8.8",
+    "ts-jest": "^29.1.1",
     "typescript": "^5.1.6",
-    "wait-for-expect": "^3.0.2",
-    "@lerna/legacy-package-management": "^7.1.4"
+    "wait-for-expect": "^3.0.2"
   },
   "prettier": {
     "semi": false,
