try to improve ts-jest performance

--- a/packages/renderer-process/package.json
+++ b/packages/renderer-process/package.json
@@ -14,13 +14,22 @@
   "author": "",
   "license": "MIT",
   "jest": {
-    "preset": "ts-jest/presets/default-esm",
     "moduleNameMapper": {
       "^/static/(.*)$": "<rootDir>/../../static/$1"
     },
     "testMatch": [
       "**/test/**/*.js"
-    ]
+    ],
+    "transform": {
+      "^.+\\.ts$": [
+        "ts-jest",
+        {
+          "isolatedModules": true,
+          "useESM": true,
+          "diagnostics": false
+        }
+      ]
+    }
   },
   "xo": {
     "rules": {
