feature: use typescript in renderer process (#3649)

--- a/packages/renderer-process/package.json
+++ b/packages/renderer-process/package.json
@@ -13,14 +13,23 @@
   "keywords": [],
   "author": "",
   "license": "MIT",
-  "devDependencies": {},
   "jest": {
     "moduleNameMapper": {
       "^/static/(.*)$": "<rootDir>/../../static/$1"
     },
     "testMatch": [
       "**/test/**/*.js"
-    ]
+    ],
+    "transform": {
+      "^.+\\.ts$": [
+        "ts-jest",
+        {
+          "isolatedModules": true,
+          "useESM": true,
+          "diagnostics": false
+        }
+      ]
+    }
   },
   "xo": {
     "rules": {
