--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -86,6 +86,9 @@ jobs:
       - name: Build Electron App (deb)
         if: matrix.os == 'ubuntu-22.04'
         run: node build/bin/build.js --target=electron-deb
+      - name: Build Electron App (snap)
+        if: matrix.os == 'ubuntu-22.04'
+        run: node build/bin/build.js --target=electron-builder-snap
       - name: Build Electron App (Macos)
         if: matrix.os == 'macos-12'
         run: node build/bin/build.js --target=electron-builder-mac
