--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -108,6 +108,9 @@ jobs:
           asset_path: ${{ env.ASSET_DEB_X64 }}
           asset_name: ${{ env.ASSET_DEB_X64 }}
           asset_content_type: application/octet-stream
+      - name: Build Electron App (snap)
+        if: matrix.os == 'ubuntu-22.04'
+        run: node build/bin/build.js --target=electron-builder-snap
       - name: Build Electron App (Macos dmg, x64)
         if: matrix.os == 'macos-12'
         run: node build/bin/build.js --product=lvce --target=electron-builder-mac
