--- a/packages/shared-process/package.json
+++ b/packages/shared-process/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "@babel/code-frame": "^7.22.10",
+    "@lvce-editor/pretty-error": "^0.1.1",
     "debug": "^4.3.4",
     "execa": "^7.2.0",
     "exit-hook": "^3.2.0",
@@ -34,15 +35,15 @@
     "xdg-basedir": "^5.1.0"
   },
   "optionalDependencies": {
+    "@vscode/windows-process-tree": "^0.5.0",
     "electron-clipboard-ex": "^1.3.3",
     "extract-zip": "^2.0.1",
-    "vscode-ripgrep-with-github-api-error-fix": "^2.9.0",
     "open": "^9.1.0",
     "symlink-dir": "^5.1.1",
+    "tail": "^2.2.6",
     "tmp-promise": "^3.0.3",
     "trash": "^8.1.1",
-    "tail": "^2.2.6",
-    "@vscode/windows-process-tree": "^0.5.0"
+    "vscode-ripgrep-with-github-api-error-fix": "^2.9.0"
   },
   "devDependencies": {
     "@types/debug": "^4.1.8",
