--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -108,6 +108,26 @@ jobs:
           asset_path: ${{ env.ASSET_DEB_X64 }}
           asset_name: ${{ env.ASSET_DEB_X64 }}
           asset_content_type: application/octet-stream
+      - name: Build Electron App (deb, arm64)
+        if: matrix.os == 'ubuntu-22.04'
+        run: node build/bin/build.js --product=lvce --target=electron-deb --arch=arm64
+      - name: Rename Electron App (deb, arm64)
+        if: matrix.os == 'ubuntu-22.04'
+        shell: bash
+        run: |
+          staging="lvce-${{ needs.create-release.outputs.rg_version }}_arm64.deb"
+          mv "build/.tmp/releases/lvce-arm64.deb" "$staging"
+          echo "ASSET_DEB_ARM64=$staging" >> $GITHUB_ENV
+      - name: Release Electron App (deb, arm64)
+        uses: actions/upload-release-asset@v1.0.1
+        if: matrix.os == 'ubuntu-22.04'
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ needs.create-release.outputs.upload_url }}
+          asset_path: ${{ env.ASSET_DEB_ARM64 }}
+          asset_name: ${{ env.ASSET_DEB_ARM64 }}
+          asset_content_type: application/octet-stream
       - name: Build Electron App (snap, x64)
         if: matrix.os == 'ubuntu-22.04'
         run: node build/bin/build.js --product=lvce --target=electron-builder-snap
