--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -128,6 +128,26 @@ jobs:
           asset_path: ${{ env.ASSET_DEB_ARM64 }}
           asset_name: ${{ env.ASSET_DEB_ARM64 }}
           asset_content_type: application/octet-stream
+      - name: Build Electron App (deb, armhf)
+        if: matrix.os == 'ubuntu-22.04'
+        run: node build/bin/build.js --product=lvce --target=electron-deb --arch=armhf
+      - name: Rename Electron App (deb, armhf)
+        if: matrix.os == 'ubuntu-22.04'
+        shell: bash
+        run: |
+          staging="lvce-${{ needs.create-release.outputs.rg_version }}_arm64.deb"
+          mv "build/.tmp/releases/lvce-armhf.deb" "$staging"
+          echo "ASSET_DEB_ARMHF=$staging" >> $GITHUB_ENV
+      - name: Release Electron App (deb, armhf)
+        uses: actions/upload-release-asset@v1.0.1
+        if: matrix.os == 'ubuntu-22.04'
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ needs.create-release.outputs.upload_url }}
+          asset_path: ${{ env.ASSET_DEB_ARMHF }}
+          asset_name: ${{ env.ASSET_DEB_ARMHF }}
+          asset_content_type: application/octet-stream
       - name: Build Electron App (snap, x64)
         if: matrix.os == 'ubuntu-22.04'
         run: node build/bin/build.js --product=lvce --target=electron-builder-snap
