feature: replace duplicate verror code with npm package

--- a/packages/pty-host/package.json
+++ b/packages/pty-host/package.json
@@ -21,12 +21,11 @@
   },
   "dependencies": {
     "@lvce-editor/pretty-error": "^1.1.0",
+    "@lvce-editor/verror": "^1.0.1",
     "debug": "^4.3.4",
-    "verror": "^1.10.1",
     "ws": "^8.13.0"
   },
   "devDependencies": {
-    "@types/verror": "^1.10.6",
     "@types/ws": "^8.5.5"
   },
   "optionalDependencies": {
