--- a/packages/extension-host-helper-process/package.json
+++ b/packages/extension-host-helper-process/package.json
@@ -61,12 +61,12 @@
   },
   "dependencies": {
     "@babel/code-frame": "^7.22.10",
+    "@lvce-editor/verror": "^1.0.1",
     "clean-stack": "^5.0.1",
-    "execa": "^8.0.0",
+    "execa": "^8.0.1",
     "got": "^13.0.0",
     "lines-and-columns": "^2.0.3",
     "minimist": "^1.2.8",
-    "verror": "^1.10.1",
     "ws": "^8.13.0"
   },
   "devDependencies": {
