--- a/packages/shared-process/package.json
+++ b/packages/shared-process/package.json
@@ -22,8 +22,9 @@
   "dependencies": {
     "@babel/code-frame": "^7.22.10",
     "@lvce-editor/pretty-error": "^1.1.0",
+    "@lvce-editor/verror": "^1.0.1",
     "debug": "^4.3.4",
-    "execa": "^8.0.0",
+    "execa": "^8.0.1",
     "exit-hook": "^3.2.0",
     "got": "^13.0.0",
     "is-object": "^1.0.2",
