--- a/packages/shared-process/package.json
+++ b/packages/shared-process/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "@babel/code-frame": "^7.22.13",
+    "@lvce-editor/jsonc-parser": "^1.0.0",
     "@lvce-editor/pretty-error": "^1.1.1",
     "@lvce-editor/verror": "^1.1.1",
     "debug": "^4.3.4",
