--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -98,6 +98,8 @@ jobs:
       - name: Build Electron App (deb)
         if: matrix.os == 'ubuntu-22.04'
         run: node build/bin/build.js --target=electron-deb
+        env:
+          HIGHEST_COMPRESSION: 1
       - name: Build Electron App (snap)
         if: matrix.os == 'ubuntu-22.04'
         run: node build/bin/build.js --target=electron-builder-snap
