fix: don't remove license property from package json for server build

--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -10,7 +10,7 @@
     "Lvce Editor",
     "Server"
   ],
-  "author": "",
+  "author": "Lvce Editor",
   "license": "MIT",
   "repository": {
     "type": "git",
