--- a/packages/shared-process/package.json
+++ b/packages/shared-process/package.json
@@ -8,8 +8,10 @@
     "test": "node --unhandled-rejections=warn --experimental-vm-modules ../../node_modules/jest/bin/jest.js --detectOpenHandles --forceExit",
     "test:watch": "node --unhandled-rejections=warn --experimental-vm-modules ../../node_modules/jest/bin/jest.js --watch"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": [
+    "Lvce Editor"
+  ],
+  "author": "Lvce Editor",
   "license": "MIT",
   "repository": {
     "type": "git",
