--- a/packages/renderer-worker/package.json
+++ b/packages/renderer-worker/package.json
@@ -21,7 +21,7 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "msw": "1.0.1",
+    "msw": "^1.3.2",
     "node-fetch": "^3.3.2"
   },
   "jest": {
