--- a/packages/pty-host/package.json
+++ b/packages/pty-host/package.json
@@ -23,11 +23,13 @@
     "@lvce-editor/pretty-error": "^1.2.1",
     "@lvce-editor/verror": "^1.1.1",
     "debug": "^4.3.4",
-    "ws": "^8.14.2",
-    "node-pty": "^1.0.0"
+    "ws": "^8.14.2"
   },
   "devDependencies": {
     "@types/ws": "^8.5.8"
+  },
+  "optionalDependencies": {
+    "node-pty": "^1.0.0"
   },
   "xo": {
     "rules": {
