--- a/packages/main-process/package.json
+++ b/packages/main-process/package.json
@@ -22,7 +22,7 @@
   "devDependencies": {
     "@electron/rebuild": "^3.3.0",
     "@types/debug": "^4.1.10",
-    "electron": "^26.4.3"
+    "electron": "^28.0.0-beta.2"
   },
   "dependencies": {
     "@babel/code-frame": "^7.22.13",
