--- a/packages/main-process/package.json
+++ b/packages/main-process/package.json
@@ -26,7 +26,8 @@
   },
   "dependencies": {
     "@babel/code-frame": "^7.22.13",
-    "clean-stack": "^5.2.0",
+    "@lvce-editor/pretty-error": "^1.2.1",
+    "@lvce-editor/verror": "^1.1.1",
     "debug": "^4.3.4",
     "electron-unhandled": "^4.0.1",
     "lines-and-columns": "^2.0.3",
