--- a/packages/renderer-worker/package.json
+++ b/packages/renderer-worker/package.json
@@ -26,7 +26,8 @@
   },
   "jest": {
     "moduleNameMapper": {
-      "^/static/(.*)$": "<rootDir>/../../static/$1"
+      "^/static/(.*)$": "<rootDir>/../../static/$1",
+      "^/js/(.*)$": "<rootDir>/../../static/js/$1"
     },
     "testMatch": [
       "**/test/**/*.js"
