--- a/packages/e2e/tsconfig.json
+++ b/packages/e2e/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "lib": ["esnext"],
     "checkJs": true,
-    "module": "esnext",
+    "module": "NodeNext",
     "target": "esnext",
     "types": ["node"],
     "moduleResolution": "nodenext",
