--- a/packages/main-process/package.json
+++ b/packages/main-process/package.json
@@ -26,6 +26,7 @@
   },
   "dependencies": {
     "@babel/code-frame": "^7.23.5",
+    "@lvce-editor/assert": "^1.0.1",
     "@lvce-editor/pretty-error": "^1.2.2",
     "@lvce-editor/verror": "^1.1.2",
     "debug": "^4.3.4",
