--- a/packages/pty-host/package.json
+++ b/packages/pty-host/package.json
@@ -20,6 +20,7 @@
     "node": ">=16"
   },
   "dependencies": {
+    "@lvce-editor/json-rpc": "^0.1.1",
     "@lvce-editor/pretty-error": "^1.2.2",
     "@lvce-editor/verror": "^1.1.2",
     "debug": "^4.3.4",
