--- a/packages/main-process/package.json
+++ b/packages/main-process/package.json
@@ -22,7 +22,7 @@
   "devDependencies": {
     "@electron/rebuild": "^3.4.1",
     "@types/debug": "^4.1.12",
-    "electron": "^28.0.0-beta.10"
+    "electron": "^28.0.0"
   },
   "dependencies": {
     "@babel/code-frame": "^7.23.5",
