--- a/packages/shared-process/package.json
+++ b/packages/shared-process/package.json
@@ -4,6 +4,10 @@
   "description": "Utility package for @lvce-editor/server",
   "main": "index.js",
   "type": "module",
+  "scripts": {
+    "test": "node --unhandled-rejections=warn --experimental-vm-modules ../../node_modules/jest/bin/jest.js --detectOpenHandles --forceExit",
+    "test:watch": "node --unhandled-rejections=warn --experimental-vm-modules ../../node_modules/jest/bin/jest.js --watch"
+  },
   "keywords": [
     "Lvce Editor"
   ],
