--- a/packages/shared-process/package.json
+++ b/packages/shared-process/package.json
@@ -23,6 +23,7 @@
   },
   "dependencies": {
     "@babel/code-frame": "^7.23.5",
+    "@lvce-editor/assert": "^1.0.1",
     "@lvce-editor/json-rpc": "^0.4.0",
     "@lvce-editor/jsonc-parser": "^1.1.0",
     "@lvce-editor/pretty-error": "^1.3.0",
