fix: set module to nodenext in tsconfig to fix typescript errors

--- a/packages/extension-host/tsconfig.json
+++ b/packages/extension-host/tsconfig.json
@@ -4,6 +4,7 @@
     "target": "esnext",
     "checkJs": true,
     "types": ["node", "jest"],
+    "module": "NodeNext",
     "moduleResolution": "nodenext",
     "isolatedModules": true,
     "noImplicitAny": false,
