--- a/packages/babel-worker/tsconfig.json
+++ b/packages/babel-worker/tsconfig.json
@@ -3,7 +3,7 @@
     "lib": ["esnext"],
     "target": "esnext",
     "checkJs": true,
-    "module": "esnext",
+    "module": "NodeNext",
     "types": ["node", "jest"],
     "moduleResolution": "nodenext",
     "isolatedModules": true,
