--- a/packages/extension-host-worker/tsconfig.json
+++ b/packages/extension-host-worker/tsconfig.json
@@ -3,6 +3,7 @@
     "lib": ["esnext", "webworker"],
     "checkJs": true,
     "target": "esnext",
+    "module": "NodeNext",
     "moduleResolution": "NodeNext",
     "types": ["jest"],
     "skipLibCheck": true,
