--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -107,7 +107,7 @@ jobs:
         run: node build/bin/build.js --target=electron-builder-snap
       - name: Build Electron App (Macos dmg, x64)
         if: matrix.os == 'macos-12'
-        run: node build/bin/build.js --target=electron-builder-mac --arch=amd64
+        run: node build/bin/build.js --target=electron-builder-mac --arch=x64
       - name: Build Electron App (Macos dmg, arm64)
         if: matrix.os == 'macos-12'
         run: node build/bin/build.js --target=electron-builder-mac --arch=arm64
