--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -105,9 +105,9 @@ jobs:
       - name: Build Electron App (snap)
         if: matrix.os == 'ubuntu-22.04'
         run: node build/bin/build.js --target=electron-builder-snap
-      - name: Build Electron App (Macos)
+      - name: Build Electron App (Macos dmg, arm64)
         if: matrix.os == 'macos-12'
-        run: node build/bin/build.js --target=electron-builder-mac
+        run: node build/bin/build.js --target=electron-builder-mac --arch=x64
       - name: Cache Electron Builder Dependencies (Windows)
         uses: actions/cache@v3
         id: electron-builder-cache-windows
