--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -115,6 +115,9 @@ jobs:
       - name: Build Electron App (exe)
         if: matrix.os == 'windows-2022'
         run: node build/bin/build.js --target=electron-builder-windows-exe
+      - name: Build Electron App (AppImage)
+        if: matrix.os == 'ubuntu-22.04'
+        run: node build/bin/build.js --target=electron-builder-app-image
       - name: Build static site
         if: matrix.os == 'ubuntu-22.04'
         run: node build/bin/build.js --target=static
