--- a/packages/extension-host-helper-process/package.json
+++ b/packages/extension-host-helper-process/package.json
@@ -61,6 +61,9 @@
   },
   "dependencies": {
     "@babel/code-frame": "^7.23.5",
+    "@lvce-editor/assert": "^1.0.1",
+    "@lvce-editor/json-rpc": "^1.0.0",
+    "@lvce-editor/pretty-error": "^1.3.0",
     "@lvce-editor/verror": "^1.1.2",
     "clean-stack": "^5.2.0",
     "execa": "^8.0.1",
