--- a/packages/pty-host/package.json
+++ b/packages/pty-host/package.json
@@ -23,8 +23,8 @@
     "@lvce-editor/json-rpc": "^1.0.0",
     "@lvce-editor/pretty-error": "^1.4.0",
     "@lvce-editor/verror": "^1.1.2",
-    "debug": "^4.3.4",
-    "ws": "^8.16.0"
+    "@lvce-editor/web-socket-server": "1.0.1",
+    "debug": "^4.3.4"
   },
   "devDependencies": {
     "@types/ws": "^8.5.10"
