--- a/packages/shared-process/package.json
+++ b/packages/shared-process/package.json
@@ -27,6 +27,7 @@
     "@lvce-editor/jsonc-parser": "^1.1.0",
     "@lvce-editor/pretty-error": "^1.4.0",
     "@lvce-editor/verror": "^1.1.2",
+    "@lvce-editor/web-socket-server": "^1.1.0",
     "debug": "^4.3.4",
     "execa": "^8.0.1",
     "exit-hook": "^4.0.0",
@@ -34,7 +35,6 @@
     "is-object": "^1.0.2",
     "p-queue": "^8.0.1",
     "tar-fs": "^3.0.4",
-    "ws": "^8.16.0",
     "xdg-basedir": "^5.1.0"
   },
   "optionalDependencies": {
