--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -106,7 +106,7 @@ jobs:
         if: matrix.os == 'ubuntu-22.04'
         run: node build/bin/build.js --target=electron-builder-snap
       - name: Build Electron App (Macos dmg, arm64)
-        if: matrix.os == 'macos-12'
+        if: matrix.os == 'macos-12' || matrix.os == 'macos-13'
         run: node build/bin/build.js --target=electron-builder-mac --arch=x64
       - name: Cache Electron Builder Dependencies (Windows)
         uses: actions/cache@v3
