feature: add option to show editor hover on mouseover

--- a/static/config/defaultSettings.json
+++ b/static/config/defaultSettings.json
@@ -11,6 +11,7 @@
   "editor.fontLigatures": true,
   "editor.links": true,
   "editor.tabSize": 2,
+  "editor.hover": false,
 
   "editor.autoClosingBrackets": true,
   "editor.autoClosingQuotes": true,
