--- a/packages/main-process/package.json
+++ b/packages/main-process/package.json
@@ -22,7 +22,7 @@
   "devDependencies": {
     "@electron/rebuild": "^3.6.0",
     "@types/debug": "^4.1.12",
-    "electron": "^28.2.0"
+    "electron": "28.1.4"
   },
   "dependencies": {
     "@lvce-editor/assert": "^1.2.0",
